# fin-data-bars

./: LICENCE  README.md  main_example.py  notes.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bars_test.yml
bars/: README.md  __init__.py  bars.py  tests.py
src/bars/: __init__.py
tests/: tests.py
