[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bars"
version = "0.1"
description = "Calculate different trade bars/candle sticks based on tick data."
authors = [
    {name = "Nicolas Mitoulis"},
]
readme = "README.md"
requires-python = ">=3.6.13"
dependencies = [
    "numpy >= 1.19.5"
    "pandas >= 1.1.5"
]
license = 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nmitou/fin-data-bars"