[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bars"
version = "0.0.1"
description = "Calculate different trade bars/candle sticks based on tick data."
authors = [
    {name = "Nicolas Mitoulis"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.21.5",
    "pandas >= 1.3.5"
]
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nmitou/fin-data-bars"